Diagnostics code was added

--- a/src/Sitecore.Support.EXMHostnameDiagnostics/App_Config/Include/zzz/Sitecore.Support.EXMHostnameDiagnostics.config
+++ b/src/Sitecore.Support.EXMHostnameDiagnostics/App_Config/Include/zzz/Sitecore.Support.EXMHostnameDiagnostics.config
@@ -2,6 +2,7 @@
   <sitecore role:require="Standalone OR ContentManagement OR ContentDelivery OR Processing OR Reporting">
     <pipelines>
       <modifyHyperlink>
+        <processor type="Sitecore.Support.LogLinkToModifyAndServerUrl, Sitecore.Support.EXMHostnameDiagnostics" patch:after="processor[@type='Sitecore.Modules.EmailCampaign.Core.Pipelines.GenerateLink.SetServerUrl, Sitecore.EmailCampaign']" />
         <processor type="Sitecore.Support.Modules.EmailCampaign.Core.Pipelines.GenerateLink.MapHostname, Sitecore.Support.EXMHostnameDiagnostics" patch:instead="processor[@type='Sitecore.Modules.EmailCampaign.Core.Pipelines.GenerateLink.MapHostname, Sitecore.EmailCampaign']" />
       </modifyHyperlink>
     </pipelines>
